# gampy

./: .gitignore  README.md  README.txt  gampy.sublime-project  setup.py
gampy/: start
gampy/core/: CMakeLists.txt  __init__.py  build.py  core.c
gampy/core/include/: wrapper.h
gampy/core/include/math/: matrix4.hpp  vector3.hpp
gampy/core/include/wrappers/: matrix.h  vector.h
gampy/core/src/: wrapper.cpp
gampy/core/src/math/: matrix4.cpp  vector3.cpp
gampy/core/src/wrappers/: matrix.cpp  vector.cpp
gampy/core/test/: Makefile  main  main.c
gampy/engine/: game.py  maincomponent.py  resource_loader.py  util.py
gampy/engine/components/: camera.py  entitycomponent.py  gamecomponent.py  inputs.py  lights.py  meshrenderer.py  physics.py
gampy/engine/core/: coreengine.py  entity.py  eventinterface.py  game.py  gamecomponent.py  gameobject.py  input.py  maincomponent.py  math3d.py  renderingengine.py  time.py  transform.py  util.py  vec2.py  vectors.py
gampy/engine/events/: time.py
gampy/engine/game/: game.py
gampy/engine/input/: input.py
gampy/engine/objects/: meshes.py  transform.py  util.py  vectors.py
gampy/engine/physics/: bounding.py  collisions.py  intersections.py  physicsengine.py
gampy/engine/render/: camera.py  forwardpass.py  lights.py  mapper.py  material.py  meshes.py  meshloading.py  renderengine.py  renderingengine.py  resourcemanagement.py  shader.py  texture.py  util.py  window.py
gampy/game/: main.py  meshrenderer.py  speeding.py  testgame.py  walking.py
gampy/test/: test_engine.py
profiling/: .gitignore  run_profile
(+21 files in other folders)
